--- a/FirstTestingProject/app/build.gradle
+++ b/FirstTestingProject/app/build.gradle
@@ -16,6 +16,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        applicationVariants.all { variant ->
+            variant.outputs.each { output ->
+                output.outputFile = file("$project.buildDir/ready for install apk/2testingproject.apk")
+            }
+        }
     }
 
 }
@@ -23,11 +28,17 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:appcompat-v7:25.0.+'
     compile 'com.android.support:cardview-v7:25.0.+'
     compile 'com.android.support:recyclerview-v7:25.0.+'
     compile 'fr.avianey.com.viewpagerindicator:library:2.4.1.1@aar'
     compile 'me.relex:circleindicator:1.2.2@aar'
+    compile 'com.sothree.slidinguppanel:library:+'
+    compile 'com.android.support:design:25.0.+'
+    compile 'com.yandex.android:mobmetricalib:2.62'
+    compile 'com.android.support.test.espresso:espresso-core:2.2.2'
+
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
 repositories {
     maven { url "http://dl.bintray.com/populov/maven" }
