--- a/FirstTestingProject/app/src/main/AndroidManifest.xml
+++ b/FirstTestingProject/app/src/main/AndroidManifest.xml
@@ -2,6 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.marya.firsttestingproject">
 
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <permission
+        android:name="com.example.marya.firsttestingproject.permission"
+        android:protectionLevel="dangerous" />
+    <permission
+        android:name="com.example.marya.firsttestingproject.permission.WRITE"
+        android:protectionLevel="dangerous" />
+    <permission
+        android:name="com.example.marya.firsttestingproject.permission.READ_ALL"
+        android:protectionLevel="dangerous" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -35,6 +45,12 @@
         </receiver>
 
         <activity android:name=".Setting"></activity>
+        <provider
+                    android:authorities="com.example.marya.firsttestingproject"
+                    android:name=".UriContentProvider"
+                    android:exported="true"
+                    android:permission="com.example.marya.firsttestingproject.permission"
+                    android:writePermission="com.example.marya.firsttestingproject.permission.WRITE"/>
     </application>
 
 </manifest>
