--- a/FirstTestingProject/app/src/main/AndroidManifest.xml
+++ b/FirstTestingProject/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.marya.firsttestingproject">
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <permission
         android:name="com.example.marya.firsttestingproject.permission"
@@ -56,6 +57,10 @@
             android:writePermission="com.example.marya.firsttestingproject.permission.WRITE" />
 
         <activity android:name=".ContactList"></activity>
+        <service
+            android:name=".ForPictureService"
+            android:exported="false"
+            android:launchMode="singleInstance" />
     </application>
 
 </manifest>
